# Weather_Station_STM32

./: README.md  Weather_Station_STM32.code-workspace
esp32-gateway/: .gitignore  CMakeLists.txt  platformio.ini
esp32-gateway/src/: CMakeLists.txt  WeatherProtocol.h  main.cpp  wifi_manager.cpp
qt_hello_world/: .gitignore  main.cpp  main.qml  weatherclient.cpp  weatherclient.h
qt_ui/: CMakeLists.txt  main.cpp
src/: main.cpp
stm32-sensor-node/: platformio.ini
stm32-sensor-node/include/: stm32f4xx_it.h
stm32-sensor-node/src/: gpio.c  main.c  spi.c  stm32f4xx_it.c
